# fastapi-auth

./: .gitignore  pyproject.toml
src/fastapi_auth/: database.py  main.py
src/fastapi_auth/core/: config.py  security.py
src/fastapi_auth/routers/: auth.py
src/fastapi_auth/schemas/: user.py
src/fastapi_auth/services/: auth_service.py
